Spacing fixes for mobile on instructors section + content update for footer links

--- a/styles.css
+++ b/styles.css
@@ -818,7 +818,7 @@ footer ul {
 	}
 
 	.experts li h3 {
-		margin-top: 0;
+		margin: 0;
 	}
 
 	.experts h2 {
